[FIX] sap.m.GenericTag: Fixed overflowing error icon
Problem: The error icon gets clipped when having zoom level.

Solution: Fix line-height for the error icon.

BCP: 1970103509

--- a/src/sap.m/src/sap/m/themes/base/GenericTag.less
+++ b/src/sap.m/src/sap/m/themes/base/GenericTag.less
@@ -147,8 +147,13 @@ html[data-sap-ui-browser^="ed"].sap-desktop {
 	}
 
 	.sapMGenericTagErrorIcon {
+		overflow: hidden;
 		color: @sapUiNegativeText;
 		padding-left: 0.5rem;
+
+		&:before {
+			line-height: normal;
+		}
 	}
 
 	.sapMGenericTagText {
@@ -164,15 +169,12 @@ html[data-sap-ui-browser^="ed"].sap-desktop {
 		min-width: @sapMGenericTagTextMinWidth;
 	}
 
-	.sapMGenericTagErrorIcon,
 	.sapMGenericTagValue {
 		display: flex;
 		flex: 0 0.5 auto;
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
-	}
-	.sapMGenericTagValue {
 		box-sizing: border-box;
 		align-items: center;
 		padding-left: 0.5rem;
